--- a/my_birthday/templates/birth/index.html
+++ b/my_birthday/templates/birth/index.html
@@ -12,12 +12,18 @@
       type="text/css"
       href="{% static 'birth/main.css' %}"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
-  <body>
-    {% if birthday %}
-    <h1>Hurray!! Today is the website owner's birthday!</h1>
-    {% else %}
-    <h1>Oops, {{ countdown }} remaining</h1>
-    {% endif %}
+  <body class=" b-flex text-center text-light bg-dark">
+    <div class="container">
+      {% if birthday_today %}
+        <h1 class="display-6 fw-lighter fw-bold">Yaayy!! Today {{ birthday|date:"j-n-Y"}} is Abdulmumin's birthday!</h1>
+      {% else %}
+        <h1 class="display-6 fw-bold">Oops, {{ days_remaining }} days remaining</h1>
+      {% endif %}
+      <button type="submit" class=" btn btn-primary px-4">Button</button>
+    </div>
   </body>
+  <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
