--- a/my_birthday/templates/birth/index.html
+++ b/my_birthday/templates/birth/index.html
@@ -7,21 +7,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <pmeta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Birthday</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link
       rel="stylesheet"
       type="text/css"
       href="{% static 'birth/main.css' %}"
     />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
-  <body class=" b-flex text-center text-light bg-dark">
-    <div class="container">
-      {% if birthday_today %}
-        <h1 class="display-6 fw-lighter fw-bold">Yaayy!! Today {{ birthday|date:"j-n-Y"}} is Abdulmumin's birthday!</h1>
-      {% else %}
-        <h1 class="display-6 fw-bold">Oops, {{ days_remaining }} days remaining</h1>
-      {% endif %}
-      <button type="submit" class=" btn btn-primary px-4">Button</button>
+  <body class="h-100 text-light bg-dark position-absolute start-50 top-50">
+    <div class="container text-center">
+      <div class="row">
+        <div class="col align-self-center text-center">
+          {% if birthday_today %}
+            <h1 class="display-6 fw-lighter fw-bold">Yaayy!! Today {{ birthday|date:"j-n-Y"}} is Abdulmumin's birthday!</h1>
+          {% else %}
+            <h1 class="display-6 fw-bold">Oops, {{ days_remaining }} days remaining</h1>
+          {% endif %}
+            <button type="submit" class="btn btn-primary px-4">Button</button>
+        </div>
+        {% comment %} <div class="col">A DIV</div>
+        <div class="col">ANOTHER DIV</div> {% endcomment %}
+      </div>
     </div>
   </body>
   <!-- JavaScript Bundle with Popper -->
